[gd_scene load_steps=16 format=2]

[ext_resource path="res://Characters/BaseCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/Chameleon/Hit (84x38).png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/Chameleon/Idle (84x38).png" type="Texture" id=3]
[ext_resource path="res://Assets/Enemies/Chameleon/Attack (84x38).png" type="Texture" id=4]
[ext_resource path="res://Assets/Enemies/Chameleon/Run (84x38).png" type="Texture" id=5]
[ext_resource path="res://Characters/Chameleon.gd" type="Script" id=6]
[ext_resource path="res://Boxes/HitBox.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=2]
resource_name = "Attack"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 10 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox:monitoring")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "Hit"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 2 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=4]
resource_name = "Idle"
length = 1.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 13 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Run"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 12, 14 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 36, 17 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 16, 5 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 23, 3 )

[node name="Chameleon" instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 1
script = ExtResource( 6 )
HIT_POINTS = 3
MAX_SPEED = 30
ACCELERATION = 400
JUMP_FORCE = 100
FRICTION = 0.15

[node name="Sprite" parent="." index="0"]
position = Vector2( 16, -5 )
texture = ExtResource( 4 )
flip_h = true
hframes = 10
frame = 9

[node name="AnimationPlayer" parent="." index="1"]
anims/Attack = SubResource( 2 )
anims/Hit = SubResource( 3 )
anims/Idle = SubResource( 4 )
anims/Run = SubResource( 5 )

[node name="Collider" parent="." index="2"]
shape = SubResource( 1 )

[node name="Senses" parent="." index="3"]
position = Vector2( 16, -5 )

[node name="FloorFront" type="RayCast2D" parent="Senses" index="0"]
position = Vector2( -11, 19 )
enabled = true
cast_to = Vector2( 0, 6 )

[node name="WallFront" type="RayCast2D" parent="Senses" index="1"]
position = Vector2( -4, 5 )
enabled = true
cast_to = Vector2( 12, 0 )

[node name="PlayerDetection" type="Area2D" parent="Senses" index="2"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Senses/PlayerDetection" index="0"]
position = Vector2( 32, 2 )
shape = SubResource( 7 )

[node name="HurtBox" parent="." index="4"]
position = Vector2( 16, -5 )
collision_layer = 4

[node name="CollisionShape2D" parent="HurtBox" index="0"]
position = Vector2( -17, -5 )
shape = SubResource( 6 )

[node name="HitBox" parent="." index="5" instance=ExtResource( 7 )]
position = Vector2( 16, -5 )
monitoring = false
collision_mask = 2

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( 19, 6 )
shape = SubResource( 8 )

[node name="Timers" type="Node" parent="." index="6"]

[node name="IdleTimer" type="Timer" parent="Timers" index="0"]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="animation_finished"]
[connection signal="body_entered" from="Senses/PlayerDetection" to="." method="_on_PlayerDetection_body_entered"]

[editable path="HurtBox"]
[editable path="HitBox"]
